# video-sniffer

./: LICENSE  README.md  pyproject.toml
src/: build_file.py  download.py  parser.py  run.py  sniffer_class.py  start_ui.py
src/core/: utils.py
src/runs/: run1.py  run2.py
src/sniffer_class/: captures.py  downloader.py  gluer.py  video_segment_capturer.py  video_segment_gluer.py
src/ui/: app.py
